Projeto FAQ accordion cad - processo de responsividade

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
 
             <div class="imagens">
               <img class="img_top" src="./images/bg-pattern-desktop.svg" alt="">
-
-              <img class="img_mid" src="./images/illustration-woman-online-mobile.svg" alt="">
-              
-              <img class="img_end" src="./images/bg-pattern-mobile.svg" alt="">
+              <picture>  
+                <source media='(max-width: 1400px)' srcset='./images/illustration-woman-online-mobile.svg'>
+                <img class="img_mid" src="./images/illustration-woman-online-mobile.svg" alt="">
+              </picture>
+              <picture>
+                <source media='(max-width: 1400px)' srcset='./images/bg-pattern-mobile.svg'>
+                <img class="img_end" src="./images/bg-pattern-mobile.svg" alt="">
+              </picture>
             
             </div>
 
