Projeto FAQ accordion cad - Adicionar imagem Box

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <main>
+      <img class="img_box" src="./images/illustration-box-desktop.svg" alt="">
       <section class="box_white">
 
             <div class="imagens">
